[package]
name = "blog"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
askama = "0.11.1"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
rand = "0.8.5"
actix-files = "0.6.0"
peeking_take_while = "1.0.0"
serde_json = "1.0.81"
clap = { version = "3.1.18", features = ["cargo", "derive"] }
serde = "1.0.137"
log = "0.4.17"
simple_logger = "2.1.0"
tokio = "1.19.2"
notify = "4.0.17"
html-escape = "0.2.11"
itertools = "0.8.0"

[features]
